--- a/templates/posters.html
+++ b/templates/posters.html
@@ -11,7 +11,7 @@
 {#Authors are encouraged to be available during two sessions each day.#}
 {##}
 {#  </div>#}
-Conference-wide poster sessions will be held February 4-7 in <a href="https://www.virtualchair.net/events/aaai-2021" target="_blank">Virutal Chair on Gather.Town</a>, and will include posters from AAAI Main Track, AAAI Special Track on AI for Social Impact, IAAI-21, Senior Member Talks, Demonstrations, Student Abstract Program, Doctoral Consortium, and the Undergraduate Consortium. Poster sessions are scheduled for the following times:
+Conference-wide poster sessions will be held February 4-7 in <a href="https://www.virtualchair.net/events/aaai-2021" target="_blank">Virtual Chair on Gather.Town</a>, and will include posters from AAAI Main Track, AAAI Special Track on AI for Social Impact, IAAI-21, Senior Member Talks, Demonstrations, Student Abstract Program, Doctoral Consortium, and the Undergraduate Consortium. Poster sessions are scheduled for the following times:
 8:45 - 10:30 AM PST,
 4:45 - 6:30 PM PST,
 12:45 - 2:30 AM PST.
