--- a/templates/index.html
+++ b/templates/index.html
@@ -83,17 +83,17 @@
 {#      #}
 {#      </dd>#}
         <dd>
-            Plenary Sessions will be held February 4-7, and will include the Conference Welcome and Awards, Keynote and Invited Talks, Invited Panels, AI in Practice, and special community events, such as the AAAI Organizational Awards Ceremony. Some pre-recorded videos may be available for <a class="text" href="plenary_sessions.html" >Plenary Sessions</a>. Plenary sessions are scheduled for the following times:
+            Plenary Sessions will be held on February 4-7, and will include the Conference Welcome and Awards, Keynote and Invited Talks, Invited Panels, AI in Practice, and special community events, such as the AAAI Organizational Awards Ceremony. Some pre-recorded videos may be available for <a class="text" href="plenary_sessions.html" >Plenary Sessions</a>. Plenary sessions are scheduled for the following times:
             <li>7:30 - 8:45 AM PST</li>
             <li>3:30 - 4:45 PM PST</li>
             <li>11:30 - 00:45 AM PST</li>
-            The <a class="text" href="plenary_session_opening_remarks_speaker_by_tuomas_sandholm.html">Opening Ceremony and Conference Awards</a> will be held on February 4, 6:30 - 7:30 AM PST, and the <a class="text" href="awards.html">AAAI Organizational Awards</a> will be held February 4, 2:00 - 3:00 PM PST. <a class="text" href="ai_in_practice.html">AI in Practice</a> panels will be held each day February 4-6, 10:30 - 11:30 AM PST.
+            The <a class="text" href="plenary_session_opening_remarks_speaker_by_tuomas_sandholm.html">Opening Ceremony and Conference Awards</a> will be held on February 4, 6:30 - 7:30 AM PST, and the <a class="text" href="awards.html">AAAI Organizational Awards</a> will be held on February 4, 2:00 - 3:00 PM PST. <a class="text" href="ai_in_practice.html">AI in Practice</a> panels will be held each day of February 4-6, 10:30 - 11:30 AM PST.
 
         </dd>
 
         <dt>Poster Sessions</dt>
         <dd>
-            Conference-wide <a class="text" href="posters.html">poster sessions</a> will be held February 4-7, and will include posters from all programs listed below under Conference Papers (except EAAI-21). Poster sessions are scheduled for the following times:
+            Conference-wide <a class="text" href="posters.html">poster sessions</a> will be held on February 4-7, and will include posters from all programs listed below under Conference Papers (except EAAI-21). Poster sessions are scheduled for the following times:
             <li>
                 8:45 - 10:30 AM PST
             </li>
