update MH8 link

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -22,7 +22,14 @@
       Author(s)
     </a>
     {% endif %}
-
+    {% if tutorial.id == 'MH8' %}
+      <a href="https://www.slideshare.net/KrishnaramKenthapadi/responsible-ai-in-industry-tutorials-at-aaai-2021-www-2021-and-facct-2021" target="_blank"  class="card-link">
+        Slides
+      </a>
+      <a href="https://sites.google.com/view/ResponsibleAITutorial" target="_blank"  class="card-link">
+        Tutorial Website
+      </a>
+    {% endif %}
 {#    {% if tutorial.sessions %}#}
 {#    <a class="card-link" data-toggle="collapse" role="button" href="#schedule">#}
 {#      Schedule#}
