--- a/templates/eaai.html
+++ b/templates/eaai.html
@@ -189,6 +189,29 @@ EAAI-21 co-chairs
 All attendees are invited to join us for an informal community meeting at the end of EAAI-21, where we'll socialize and share ideas for next year's symposium.</p>
             </div>
 </div>
+<div class="container" style="; padding: 0px;">
+  <div class="text-muted text-center">
+      <span>
+      You can open the
+    <a href="https://{{config.chat_server}}/channel/eaai" target="_blank">#eaai</a>
+    channel
+    in separate windows.
+    </span>
+  </div>
+<div id="rocketchat_div" class="col-md-5 col-xs-12 p-2">
+    <div id="gitter" class="slp">
+        <iframe frameborder="0" onload="change_col();return false;" src="https://aaai-21.rocket.chat/channel/eaai?layout=embedded" height="700px" width="100%" ></iframe>
+        </div>
+</div>
+
+</div>
+<script>
+function change_col(){
+      $("#rocketchat_div").removeClass("col-md-5");
+      $("#rocketchat_div").addClass("col-md-12");
+}
+</script>
+
 {% endblock %}
 
 {% block footer %}
