delete pre-recorded link

--- a/templates/paper.html
+++ b/templates/paper.html
@@ -293,8 +293,8 @@
       {% if paper.presentation_id %}
       <span>
       You can open the
-    <a href="https://slideslive.com/{{paper.presentation_id}}" target="_blank">pre-recorded video</a>
-    and the
+{#    <a href="https://slideslive.com/{{paper.presentation_id}}" target="_blank">pre-recorded video</a>#}
+{#    and the#}
     <a href="https://{{config.chat_server}}/channel/{{paper.rocketchat_channel}}"
        target="_blank">#{{paper.rocketchat_channel}}</a>
     channel
