--- a/templates/plenary_session.html
+++ b/templates/plenary_session.html
@@ -182,8 +182,8 @@ Tuomas Sandholm            <br>
     {% if plenary_session.rocketchat_channel and plenary_session.presentation_id %}
     <div class="text-muted text-center">
       You can open the
-      <a href="https://slideslive.com/{{plenary_session.presentation_id}}" target="_blank">pre-recorded video</a>
-        and the
+{#      <a href="https://slideslive.com/{{plenary_session.presentation_id}}" target="_blank">pre-recorded video</a>#}
+{#        and the#}
         <a href="https://{{config.chat_server}}/channel/{{plenary_session.rocketchat_channel}}"
            target="_blank">#{{plenary_session.rocketchat_channel}}</a>
         channel
