delete pre-recorded link
Remove pre-recorded link of tutorials and new faculty highlights

--- a/templates/new_faculty_highlights_program_single.html
+++ b/templates/new_faculty_highlights_program_single.html
@@ -24,13 +24,13 @@
   </div>
 
   <div class="text-muted text-center">
-    {% if tutorial.prerecorded %}
-    <a class="btn btn-outline-danger"
-       href="https://slideslive.com/{{tutorial.prerecorded}}" target="_blank"
-       style="margin-left: 5px; margin-right: 5px">
-      Pre-recorded Video
-    </a>
-    {% endif %}
+{#    {% if tutorial.prerecorded %}#}
+{#    <a class="btn btn-outline-danger"#}
+{#       href="https://slideslive.com/{{tutorial.prerecorded}}" target="_blank"#}
+{#       style="margin-left: 5px; margin-right: 5px">#}
+{#      Pre-recorded Video#}
+{#    </a>#}
+{#    {% endif %}#}
 
     <a class="btn btn-outline-danger"
        href="https://aaai-21.rocket.chat/channel/{{tutorial.rocketchat_channel}}"
