--- a/templates/index.html
+++ b/templates/index.html
@@ -224,7 +224,7 @@
 
 
   <div class="col-md-5 col-sm-12">
-{#      <div class="row m-2">#}
+      <div class="row m-2">
     <!-- Slides Live-->
 {#    <div class="col-md-12 col-xs-12 my-auto p-2" >#}
 {#        <div class="text-muted">#}
@@ -269,30 +269,24 @@
 {##}
 {#    </div>#}
 {##}
-{#     <div class="col-md-12 col-xs-12 my-auto p-2" >#}
-{#        <div class="text-muted">#}
-{#      Intro by Associate Conference Chairs for Virtual Operations#}
-{#      </div>#}
-{##}
-{#      <div id="presentation-intro-2" class="slp my-auto"></div>#}
-{##}
-{#      <script src='static/js/embed_presentation.js'></script>#}
-{#      <script>#}
-{#        embed_2 = new SlidesLiveEmbed('presentation-intro-2', {#}
-{#        presentationId: '38952019',#}
-{#        presentationId: '38938822',#}
-{#        autoPlay: false, // change to true to autoplay the embedded presentation#}
-{#        verticalEnabled: false,#}
-{#        verticalWhenWidthLte: 500,#}
-{#        allowHiddenControlsWhenPaused: true,#}
-{#        hideTitle: true#}
-{#        });#}
-{#      </script>#}
-{##}
-{#    </div>#}
+     <div class="col-md-12 col-xs-12 my-auto p-2" >
+        <h5>Introduction to Virtual Website and Gather.Town</h5>
+        <div id="presentation-intro-2" class="slp my-auto"></div>
+        <script src='static/js/embed_presentation.js'></script>
+        <script>
+            embed_2 = new SlidesLiveEmbed('presentation-intro-2', {
+            presentationId: '38952019',
+            autoPlay: false, // change to true to autoplay the embedded presentation
+            verticalEnabled: false,
+            verticalWhenWidthLte: 500,
+            allowHiddenControlsWhenPaused: true,
+            hideTitle: true
+            });
+        </script>
+     </div>
 
 
-{#  </div>#}
+  </div>
 
     <div class="text-center mt-4">
       <h5>Announcements</h5>
