--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,10 @@
 
 {% block content %}
 
+
+
 <div class="row">
+
   <div class="col-md-7 col-sm-12 pr-5 lead">
       <ul class="ctagcloud">
         <li>
@@ -224,7 +227,7 @@
 
 
   <div class="col-md-5 col-sm-12">
-      <div class="row m-2">
+    <div class="row m-2">
     <!-- Slides Live-->
 {#    <div class="col-md-12 col-xs-12 my-auto p-2" >#}
 {#        <div class="text-muted">#}
@@ -270,14 +273,14 @@
 {#    </div>#}
 {##}
      <div class="col-md-12 col-xs-12 my-auto p-2" >
-        <h5>Introduction to Virtual Website and Gather.Town</h5>
+         <h5 style="text-align: center">Introduction to Virtual Website and Gather.Town</h5>
         <div id="presentation-intro-2" class="slp my-auto"></div>
         <script src='static/js/embed_presentation.js'></script>
         <script>
             embed_2 = new SlidesLiveEmbed('presentation-intro-2', {
             presentationId: '38952019',
             autoPlay: false, // change to true to autoplay the embedded presentation
-            verticalEnabled: false,
+            verticalEnabled: true,
             verticalWhenWidthLte: 500,
             allowHiddenControlsWhenPaused: true,
             hideTitle: true
