--- a/templates/posters.html
+++ b/templates/posters.html
@@ -29,9 +29,9 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
 {#  </thead>#}
   <tbody>
     <tr>
-      <td>4-Feb</td>
-      <td>08:45AM-10:30AM</td>
-      <td>
+      <td style="width:5%;vertical-align:middle;">4-Feb</td>
+      <td style="width:19%;vertical-align:middle;">08:45AM-10:30AM Sponsored by <a href="https://virtual.2021.aaai.org/sponsor_ibm.html" target="_blank">IBM</a></td>
+      <td style="width:40%;">
           <a href="posters.html#AB-D1-R1">AB-D1-R1</a> +
           <a href="posters.html#AB-D1-R2">AB-D1-R2</a> +
           <a href="posters.html#BC-D1-R1">BC-D1-R1</a> +
@@ -45,8 +45,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       </td>
     </tr>
     <tr>
-      <td>4-Feb</td>
-      <td>04:45PM-06:30PM</td>
+      <td style="width:5%;vertical-align:middle;">4-Feb</td>
+      <td style="width:19%;vertical-align:middle;">04:45PM-06:30PM Sponsored by <a href="https://virtual.2021.aaai.org/sponsor_ibm.html" target="_blank">IBM</a></td>
       <td><a href="posters.html#AC-D1-R1">AC-D1-R1</a> +
           <a href="posters.html#AC-D1-R2">AC-D1-R2</a> +
           <a href="posters.html#BC-D1-R1">BC-D1-R1</a> +
@@ -60,8 +60,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       </td>
     </tr>
     <tr>
-      <td>5-Feb</td>
-      <td>12:45AM-02:30AM</td>
+      <td style="width:5%;vertical-align:middle;">5-Feb</td>
+      <td style="width:19%;vertical-align:middle;">12:45AM-02:30AM Sponsored by <a href="https://virtual.2021.aaai.org/sponsor_ibm.html" target="_blank">IBM</a></td>
       <td><a href="posters.html#AB-D1-R1">AB-D1-R1</a> +
           <a href="posters.html#AB-D1-R2">AB-D1-R2</a> +
           <a href="posters.html#AC-D1-R1">AC-D1-R1</a> +
@@ -75,8 +75,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       </td>
     </tr>
     <tr>
-      <td>5-Feb</td>
-      <td>08:45AM-10:30AM</td>
+      <td style="width:5%;vertical-align:middle;">5-Feb</td>
+      <td style="width:19%;vertical-align:middle;">08:45AM-10:30AM Sponsored by <a href="https://virtual.2021.aaai.org/sponsor_amazon_science.html" target="_blank">Amazon</a></td>
       <td><a href="posters_feb5.html#AB-D2-R1">AB-D2-R1</a> +
           <a href="posters_feb5.html#AB-D2-R2">AB-D2-R2</a> +
           <a href="posters_feb5.html#BC-D2-R1">BC-D2-R1</a> +
@@ -89,8 +89,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       </td>
     </tr>
     <tr>
-      <td>5-Feb</td>
-      <td>04:45PM-06:30PM</td>
+      <td style="width:5%;vertical-align:middle;">5-Feb</td>
+      <td style="width:19%;vertical-align:middle;">04:45PM-06:30PM Sponsored by <a href="https://virtual.2021.aaai.org/sponsor_amazon_science.html" target="_blank">Amazon</a></td>
       <td><a href="posters_feb5.html#AC-D2-R1">AC-D2-R1</a> +
           <a href="posters_feb5.html#AC-D2-R2">AC-D2-R2</a> +
           <a href="posters_feb5.html#BC-D2-R1">BC-D2-R1</a> +
@@ -102,8 +102,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       </td>
     </tr>
     <tr>
-      <td>6-Feb</td>
-      <td>12:45AM-02:30AM</td>
+      <td style="width:5%;vertical-align:middle;">6-Feb</td>
+      <td style="width:19%;vertical-align:middle;">12:45AM-02:30AM Sponsored by <a href="https://virtual.2021.aaai.org/sponsor_amazon_science.html" target="_blank">Amazon</a></td>
       <td><a href="posters_feb5.html#AB-D2-R1">AB-D2-R1</a> +
           <a href="posters_feb5.html#AB-D2-R2">AB-D2-R2</a> +
           <a href="posters_feb5.html#AC-D2-R1">AC-D2-R1</a> +
@@ -115,8 +115,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       </td>
     </tr>
     <tr>
-      <td>6-Feb</td>
-      <td>08:45AM-10:30AM</td>
+      <td style="width:5%;vertical-align:middle;">6-Feb</td>
+      <td style="width:19%;vertical-align:middle;">08:45AM-10:30AM Sponsored by <a href="https://virtual.2021.aaai.org/sponsor_google_research.html" target="_blank">Google</a></td>
       <td><a href="posters_feb6.html#AB-D3-R1">AB-D3-R1</a> +
           <a href="posters_feb6.html#AB-D3-R2">AB-D3-R2</a> +
           <a href="posters_feb6.html#BC-D3-R1">BC-D3-R1</a> +
@@ -127,8 +127,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       </td>
     </tr>
     <tr>
-      <td>6-Feb</td>
-      <td>04:45PM-06:30PM</td>
+      <td style="width:5%;vertical-align:middle;">6-Feb</td>
+      <td style="width:19%;vertical-align:middle;">04:45PM-06:30PM Sponsored by <a href="https://virtual.2021.aaai.org/sponsor_sony.html" target="_blank">Sony</a></td>
       <td><a href="posters_feb6.html#AC-D3-R1">AC-D3-R1</a> +
           <a href="posters_feb6.html#AC-D3-R2">AC-D3-R2</a> +
           <a href="posters_feb6.html#BC-D3-R1">BC-D3-R1</a> +
@@ -139,8 +139,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       </td>
     </tr>
     <tr>
-      <td>7-Feb</td>
-      <td>12:45AM-02:30AM</td>
+      <td style="width:5%;vertical-align:middle;">7-Feb</td>
+      <td style="width:19%;vertical-align:middle;">12:45AM-02:30AM Sponsored by <a href="https://virtual.2021.aaai.org/sponsor_baidu.html" target="_blank">Baidu</a></td>
       <td><a href="posters_feb6.html#AB-D3-R1">AB-D3-R1</a> +
           <a href="posters_feb6.html#AB-D3-R2">AB-D3-R2</a> +
           <a href="posters_feb6.html#AC-D3-R1">AC-D3-R1</a> +
@@ -151,8 +151,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       </td>
     </tr>
     <tr>
-      <td>7-Feb</td>
-      <td>08:45AM-10:30AM</td>
+      <td style="width:5%;vertical-align:middle;">7-Feb</td>
+      <td style="width:19%;vertical-align:middle;">08:45AM-10:30AM</td>
       <td><a href="posters_feb7.html#AB-D4-R1">AB-D4-R1</a> +
           <a href="posters_feb7.html#AB-D4-R2">AB-D4-R2</a> +
           <a href="posters_feb7.html#BC-D4-R1">BC-D4-R1</a> +
@@ -162,8 +162,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       </td>
     </tr>
     <tr>
-      <td>7-Feb</td>
-      <td>04:45PM-06:30PM</td>
+      <td style="width:5%;vertical-align:middle;">7-Feb</td>
+      <td style="width:19%;vertical-align:middle;">04:45PM-06:30PM</td>
       <td><a href="posters_feb7.html#AC-D4-R1">AC-D4-R1</a> +
           <a href="posters_feb7.html#AC-D4-R2">AC-D4-R2</a> +
           <a href="posters_feb7.html#BC-D4-R1">BC-D4-R1</a> +
@@ -173,8 +173,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
       </td>
     </tr>
     <tr>
-      <td>8-Feb</td>
-      <td>12:45AM-02:30AM</td>
+      <td style="width:5%;vertical-align:middle;">8-Feb</td>
+      <td style="width:19%;vertical-align:middle;">12:45AM-02:30AM</td>
       <td><a href="posters_feb7.html#AB-D4-R1">AB-D4-R1</a> +
           <a href="posters_feb7.html#AB-D4-R2">AB-D4-R2</a> +
           <a href="posters_feb7.html#AC-D4-R1">AC-D4-R1</a> +
