--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -30,6 +30,12 @@
         Tutorial Website
       </a>
     {% endif %}
+    {% if tutorial.id == 'MH7' %}
+      <a href="https://sites.google.com/view/ml-co-aaai-21/" target="_blank"  class="card-link">
+        Tutorial Website
+      </a>
+    {% endif %}
+
 {#    {% if tutorial.sessions %}#}
 {#    <a class="card-link" data-toggle="collapse" role="button" href="#schedule">#}
 {#      Schedule#}
