--- a/static/css/main.css
+++ b/static/css/main.css
@@ -500,6 +500,16 @@ body .carousel-control-prev {
   border-color: #82b74b;
 }
 
+.fc-v-event.calendar-event-plenary-aaai {
+  background-color: #7a8412;
+  border-color: #7a8412;
+}
+
+.fc-v-event.calendar-event-plenary-iaai {
+  background-color: #208451;
+  border-color: #208451;
+}
+
 .fc-v-event.calendar-event-eaai {
   background-color: #26ffbc;
   border-color: #26ffbc;
