--- a/static/css/main.css
+++ b/static/css/main.css
@@ -495,7 +495,7 @@ body .carousel-control-prev {
   border-color: #ffc107;
 }
 
-.fc-v-event.calendar-event-plenary {
+.fc-v-event.calendar-event-plenary-aaaiiaai {
   background-color: #82b74b;
   border-color: #82b74b;
 }
