--- a/templates/meet_with_a_fellow.html
+++ b/templates/meet_with_a_fellow.html
@@ -50,13 +50,17 @@
                 <td scope="row">February 4, 01:00 PM - 02:00 PM PST</td>
                 <td style="white-space: pre-wrap;">Maria Gini, Jorg Hoffmann, Holly Yanco</td>
               </tr>
+                <tr>
+                <td scope="row">February 5, 04:00 AM - 06:00 AM PST</td>
+                <td style="white-space: pre-wrap;">Malte Helmert</td>
+              </tr>
               <tr>
                 <td scope="row">February 5, 12:00 PM - 01:00 PM PST</td>
                 <td style="white-space: pre-wrap;">Murray Campbell, Marie desJardins, Eugene Freuder, Mark Maybury</td>
               </tr>
               <tr>
                 <td scope="row">February 5, 01:00 PM - 02:00 PM PST</td>
-                <td style="white-space: pre-wrap;">Jim Hendler, Alan Mackworth, Antonio Torralba</td>
+                <td style="white-space: pre-wrap;">Jim Hendler, Alan Mackworth, Francesca Rossi, Antonio Torralba</td>
               </tr>
               <tr>
                 <td scope="row">February 6, 12:00 PM - 01:00 PM PST</td>
