--- a/templates/index.html
+++ b/templates/index.html
@@ -273,7 +273,7 @@
 {#    </div>#}
 {##}
      <div class="col-md-12 col-xs-12 my-auto p-2" >
-         <h5 style="text-align: center">Introduction to Virtual Website and Gather.Town</h5>
+         <h5 style="text-align: center">Introduction to Virtual Website and Gather.Town by Virtual Chairs</h5>
         <div id="presentation-intro-2" class="slp my-auto"></div>
         <script src='static/js/embed_presentation.js'></script>
         <script>
