--- a/templates/help_desk.html
+++ b/templates/help_desk.html
@@ -56,11 +56,13 @@
   }
 
   button.btn-grp {
-    width: 12%;
+    width: 13%;
     height: 5%;
-    margin: 0.3rem;
+    margin: 0.2rem;
+    margin-bottom: 0.5rem;
     border-radius: 4px;
-    background-color: #f4511e;
+    /* background-color: #f4511e; */
+    background-color:  rgba(0, 114, 188, 1);;
     border: none;
     color: #FFFFFF;
     text-align: center;
@@ -70,7 +72,7 @@
   }
 
   button.btn-grp:hover {
-    background-color: #008CBA;
+    background-color: #f4511e;
     color: white;
   }
 
