--- a/templates/papers.html
+++ b/templates/papers.html
@@ -221,6 +221,16 @@
               />
               Award
             </label>
+
+            <label class="btn btn-sm btn-outline-secondary" data-tippy-content="Best Papers and Distinguished Papers"   style="width: 4em;">
+              <input
+                type="radio"
+                name="program"
+                value="Best"
+                autocomplete="off"
+              />
+              Best
+            </label>
             <label class="btn btn-sm btn-outline-secondary" style="width: 4.5em;">
               <input
                 type="radio"
