--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -35,6 +35,11 @@
         Tutorial Website
       </a>
     {% endif %}
+    {% if tutorial.id == 'MQ3' %}
+      <a href="https://sites.google.com/site/cgallicch/resources/tutorial_DRNN" target="_blank"  class="card-link">
+        Tutorial Website
+      </a>
+    {% endif %}
 
 {#    {% if tutorial.sessions %}#}
 {#    <a class="card-link" data-toggle="collapse" role="button" href="#schedule">#}
