--- a/templates/index.html
+++ b/templates/index.html
@@ -229,49 +229,27 @@
   <div class="col-md-5 col-sm-12">
     <div class="row m-2">
     <!-- Slides Live-->
-{#    <div class="col-md-12 col-xs-12 my-auto p-2" >#}
-{#        <div class="text-muted">#}
-{#      Intro by General Chair#}
-{#      </div>#}
-{#      <div id="presentation-intro" class="slp my-auto"></div>#}
-{##}
-{#      <script src='static/js/embed_presentation.js'></script>#}
-{#      <script>#}
-{#        embed = new SlidesLiveEmbed('presentation-intro', {#}
-{#        presentationId: '38952017',#}
-{#        presentationId: '38938822',#}
-{#        autoPlay: false, // change to true to autoplay the embedded presentation#}
-{#        verticalEnabled: false,#}
-{#        verticalWhenWidthLte: 500,#}
-{#        allowHiddenControlsWhenPaused: true,#}
-{#        hideTitle: true#}
-{#        });#}
-{#      </script>#}
-{##}
-{#    </div>#}
-{##}
-{#     <div class="col-md-12 col-xs-12 my-auto p-2" >#}
-{#        <div class="text-muted">#}
-{#      Intro by Program Chairs#}
-{#      </div>#}
-{##}
-{#      <div id="presentation-intro-1" class="slp my-auto"></div>#}
-{##}
-{#      <script src='static/js/embed_presentation.js'></script>#}
-{#      <script>#}
-{#        embed_1 = new SlidesLiveEmbed('presentation-intro-1', {#}
-{#        presentationId: '38952018',#}
-{#        presentationId: '38938822',#}
-{#        autoPlay: false, // change to true to autoplay the embedded presentation#}
-{#        verticalEnabled: false,#}
-{#        verticalWhenWidthLte: 500,#}
-{#        allowHiddenControlsWhenPaused: true,#}
-{#        hideTitle: true#}
-{#        });#}
-{#      </script>#}
-{##}
-{#    </div>#}
-{##}
+
+     <div class="col-md-12 col-xs-12 my-auto p-2" >
+        <h5 style="text-align: center">
+      Intro by General Chair
+      </h5>
+      <div id="presentation-intro" class="slp my-auto"></div>
+
+      <script src='static/js/embed_presentation.js'></script>
+      <script>
+        embed = new SlidesLiveEmbed('presentation-intro', {
+        presentationId: '38952017',
+        autoPlay: false, // change to true to autoplay the embedded presentation
+        verticalEnabled: true,
+        verticalWhenWidthLte: 500,
+        allowHiddenControlsWhenPaused: true,
+        hideTitle: true
+        });
+      </script>
+
+    </div>
+
      <div class="col-md-12 col-xs-12 my-auto p-2" >
          <h5 style="text-align: center">Introduction to Virtual Website and Gather.Town by Virtual Chairs</h5>
         <div id="presentation-intro-2" class="slp my-auto"></div>
@@ -287,6 +265,69 @@
             });
         </script>
      </div>
+
+     <div class="col-md-12 col-xs-12 my-auto p-2" >
+        <h5 style="text-align: center">
+      Introduction to AAAI'21 by PC Chairs
+      </h5>
+
+      <div id="presentation-intro-1" class="slp my-auto"></div>
+
+      <script src='static/js/embed_presentation.js'></script>
+      <script>
+        embed_1 = new SlidesLiveEmbed('presentation-intro-1', {
+        presentationId: '38952018',
+        autoPlay: false, // change to true to autoplay the embedded presentation
+        verticalEnabled: true,
+        verticalWhenWidthLte: 500,
+        allowHiddenControlsWhenPaused: true,
+        hideTitle: true
+        });
+      </script>
+
+    </div>
+
+    <div class="col-md-12 col-xs-12 my-auto p-2" >
+        <h5 style="text-align: center">
+      Introduction to IAAI'21 by PC Chairs
+      </h5>
+
+      <div id="presentation-intro-4" class="slp my-auto"></div>
+
+      <script src='static/js/embed_presentation.js'></script>
+      <script>
+        embed_4 = new SlidesLiveEmbed('presentation-intro-4', {
+        presentationId: '38952234',
+        autoPlay: false, // change to true to autoplay the embedded presentation
+        verticalEnabled: true,
+        verticalWhenWidthLte: 500,
+        allowHiddenControlsWhenPaused: true,
+        hideTitle: true
+        });
+      </script>
+
+    </div>
+
+    <div class="col-md-12 col-xs-12 my-auto p-2" >
+        <h5 style="text-align: center">
+      Introduction to EAAI'21 by PC Chairs
+      </h5>
+
+      <div id="presentation-intro-5" class="slp my-auto"></div>
+
+      <script src='static/js/embed_presentation.js'></script>
+      <script>
+        embed_5 = new SlidesLiveEmbed('presentation-intro-5', {
+        presentationId: '38952233',
+        autoPlay: false, // change to true to autoplay the embedded presentation
+        verticalEnabled: true,
+        verticalWhenWidthLte: 500,
+        allowHiddenControlsWhenPaused: true,
+        hideTitle: true
+        });
+      </script>
+
+    </div>
 
 
   </div>
