--- a/templates/index.html
+++ b/templates/index.html
@@ -232,7 +232,7 @@
 
      <div class="col-md-12 col-xs-12 my-auto p-2" >
         <h5 style="text-align: center">
-      Intro by General Chair
+      Welcome to AAAI'21 by General Chair
       </h5>
       <div id="presentation-intro" class="slp my-auto"></div>
 
