--- a/templates/index.html
+++ b/templates/index.html
@@ -286,48 +286,48 @@
       </script>
 
     </div>
-
-    <div class="col-md-12 col-xs-12 my-auto p-2" >
-        <h5 style="text-align: center">
-      Introduction to IAAI'21 by PC Chairs
-      </h5>
-
-      <div id="presentation-intro-4" class="slp my-auto"></div>
-
-      <script src='static/js/embed_presentation.js'></script>
-      <script>
-        embed_4 = new SlidesLiveEmbed('presentation-intro-4', {
-        presentationId: '38952234',
-        autoPlay: false, // change to true to autoplay the embedded presentation
-        verticalEnabled: true,
-        verticalWhenWidthLte: 500,
-        allowHiddenControlsWhenPaused: true,
-        hideTitle: true
-        });
-      </script>
-
-    </div>
-
-    <div class="col-md-12 col-xs-12 my-auto p-2" >
-        <h5 style="text-align: center">
-      Introduction to EAAI'21 by PC Chairs
-      </h5>
-
-      <div id="presentation-intro-5" class="slp my-auto"></div>
-
-      <script src='static/js/embed_presentation.js'></script>
-      <script>
-        embed_5 = new SlidesLiveEmbed('presentation-intro-5', {
-        presentationId: '38952233',
-        autoPlay: false, // change to true to autoplay the embedded presentation
-        verticalEnabled: true,
-        verticalWhenWidthLte: 500,
-        allowHiddenControlsWhenPaused: true,
-        hideTitle: true
-        });
-      </script>
-
-    </div>
+{##}
+{#    <div class="col-md-12 col-xs-12 my-auto p-2" >#}
+{#        <h5 style="text-align: center">#}
+{#      Introduction to IAAI'21 by PC Chairs#}
+{#      </h5>#}
+{##}
+{#      <div id="presentation-intro-4" class="slp my-auto"></div>#}
+{##}
+{#      <script src='static/js/embed_presentation.js'></script>#}
+{#      <script>#}
+{#        embed_4 = new SlidesLiveEmbed('presentation-intro-4', {#}
+{#        presentationId: '38952234',#}
+{#        autoPlay: false, // change to true to autoplay the embedded presentation#}
+{#        verticalEnabled: true,#}
+{#        verticalWhenWidthLte: 500,#}
+{#        allowHiddenControlsWhenPaused: true,#}
+{#        hideTitle: true#}
+{#        });#}
+{#      </script>#}
+{##}
+{#    </div>#}
+{##}
+{#    <div class="col-md-12 col-xs-12 my-auto p-2" >#}
+{#        <h5 style="text-align: center">#}
+{#      Introduction to EAAI'21 by PC Chairs#}
+{#      </h5>#}
+{##}
+{#      <div id="presentation-intro-5" class="slp my-auto"></div>#}
+{##}
+{#      <script src='static/js/embed_presentation.js'></script>#}
+{#      <script>#}
+{#        embed_5 = new SlidesLiveEmbed('presentation-intro-5', {#}
+{#        presentationId: '38952233',#}
+{#        autoPlay: false, // change to true to autoplay the embedded presentation#}
+{#        verticalEnabled: true,#}
+{#        verticalWhenWidthLte: 500,#}
+{#        allowHiddenControlsWhenPaused: true,#}
+{#        hideTitle: true#}
+{#        });#}
+{#      </script>#}
+{##}
+{#    </div>#}
 
 
   </div>
