update content in helpdesk

--- a/templates/help_desk.html
+++ b/templates/help_desk.html
@@ -175,7 +175,7 @@
     </ul>
   </div>
 
-  <h5 id='other-channels'>Check out our other channels as well, especially our sponsors.</h5>
+  <h5 id='other-channels'>Check our other channels as well, especially our sponsors.</h5>
 
   <div class="rocketchat-safety-valve btn-container">
     <button class="btn-grp" id="general" onclick="redirect(this.id)"><span>General</span></button>
