poster description update

--- a/templates/posters.html
+++ b/templates/posters.html
@@ -211,8 +211,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
                         <div id="{{poster.room}}"  style="position: relative;top: -80px;"></div>
 {#                        <a href="#{{poster.room}}"  style="position: relative;top: -80px;"></a>#}
                         <a name="{{ poster.uid }}">
-                            <h5>Room:
-                                {{poster.room}}
+                            <h5>
+                                {{poster.room}} Posters
                                 <span>{{poster.session}} </span>
                             </h5>
                             <h6>
@@ -229,8 +229,8 @@ Conference-wide poster sessions will be held February 4-7 in <a href="https://ww
                         <div id="{{poster.room}}"  style="position: relative;top: -80px;"></div>
 {#                        <a href="#{{poster.room}}"  style="position: relative;top: -80px;"></a>#}
                         <a name="{{ poster.uid }}">
-                            <h5>Room:
-                                {{poster.room}}
+                            <h5>
+                                {{poster.room}} Posters
                                 <span>{{poster.session}} </span>
     {#                            <span class="session_times">{{poster.time1}} PST/ {{poster.time2}} PST</span>#}
                             </h5>
