--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -193,12 +193,27 @@
       </script>
     </div>
     {% else %}
-    <div class="col-md-7 col-xs-12 my-auto p-2" >
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/UX8OubxsY8w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-{#        MH2,3,7,8,9#}
+    {% if tutorial.id == 'MH3'%}
+        <div class="col-md-7 col-xs-12 my-auto p-2" >
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/HwdDQWelPy0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    {% endif %}
+    {% if tutorial.id == 'MH7'%}
+        <div class="col-md-7 col-xs-12 my-auto p-2" >
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/XVLd7hf6y6M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    {% endif %}
+    {% if tutorial.id == 'MH9'%}
+        <div class="col-md-7 col-xs-12 my-auto p-2" >
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mHDCnsWr3G8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    {% endif %}
+{#    <div class="col-md-7 col-xs-12 my-auto p-2" >#}
+{#      <iframe width="560" height="315" src="https://www.youtube.com/embed/UX8OubxsY8w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>#}
+{#    </div>#}
+{#        MH2,3,7,9#}
 {#        AQ2#}
-{#        AH4,5,6,8,9,10#}
+{#        AH4,5,6,8,9#}
 
     {% endif %}
 
