Update vedio of tutorials
Update vedio of MH2

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -193,6 +193,11 @@
       </script>
     </div>
     {% else %}
+    {% if tutorial.id == 'MH2'%}
+        <div class="col-md-7 col-xs-12 my-auto p-2" >
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/T_TTzXGf-n8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    {% endif %}
     {% if tutorial.id == 'MH3'%}
         <div class="col-md-7 col-xs-12 my-auto p-2" >
             <iframe width="560" height="315" src="https://www.youtube.com/embed/HwdDQWelPy0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -208,10 +213,6 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/mHDCnsWr3G8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     {% endif %}
-{#    <div class="col-md-7 col-xs-12 my-auto p-2" >#}
-{#      <iframe width="560" height="315" src="https://www.youtube.com/embed/UX8OubxsY8w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>#}
-{#    </div>#}
-{#        MH2,3,7,9#}
 {#        AQ2#}
 {#        AH4,5,6,8,9#}
 
