--- a/templates/meet_with_a_fellow.html
+++ b/templates/meet_with_a_fellow.html
@@ -63,6 +63,10 @@
                 <td style="white-space: pre-wrap;">Jim Hendler, Alan Mackworth, Antonio Torralba</td>
               </tr>
               <tr>
+                <td scope="row">February 5, 08:00 PM - 09:00 PM PST</td>
+                <td style="white-space: pre-wrap;">Peter Stone</td>
+              </tr>
+              <tr>
                 <td scope="row">February 6, 12:00 PM - 01:00 PM PST</td>
                 <td style="white-space: pre-wrap;">Chad Jenkins, Bing Liu, Francesca Rossi</td>
               </tr>
