--- a/templates/papers.html
+++ b/templates/papers.html
@@ -412,7 +412,7 @@
 
         <div style="float: right;">
           <a class="btn btn-sm btn-outline-primary" id="modalChatUrl" href="#">Chat</a>
-          <a class="btn btn-sm btn-outline-primary" id="modalPresUrl" href="#">Presentation</a>
+{#          <a class="btn btn-sm btn-outline-primary" id="modalPresUrl" href="#">Presentation</a>#}
           <a class="btn btn-sm btn-outline-primary" id="modalPaperUrl" href="#">Paper</a>
         </div>
 
