--- a/templates/base.html
+++ b/templates/base.html
@@ -96,6 +96,7 @@
     ('papers.html', 'Papers'),
     ('iaai_eaai.html', 'IAAI/EAAI'),
     ('events.html','Events'),
+    ('new_faculty_highlights_program.html','New Faculity'),
     ('community.html','Community'),
     ('sponsors.html', 'Sponsors'),
     ('about.html', 'Help'),
@@ -207,9 +208,9 @@
                     <a class="dropdown-item" href="invited_panels_program.html">
                       Invited Panels Program
                     </a>
-                    <a class="dropdown-item" href="new_faculty_highlights_program.html">
-                      New Faculty Highlights Program
-                    </a>
+{#                    <a class="dropdown-item" href="new_faculty_highlights_program.html">#}
+{#                      New Faculty Highlights Program#}
+{#                    </a>#}
                   </div>
                 </li>
               {% elif id == "Community" %}
