--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,7 @@
     ('papers.html', 'Papers'),
     ('iaai_eaai.html', 'IAAI/EAAI'),
     ('events.html','Events'),
-    ('new_faculty_highlights_program.html','New Faculity'),
+    ('new_faculty_highlights_program.html','New Faculty'),
     ('community.html','Community'),
     ('sponsors.html', 'Sponsors'),
     ('about.html', 'Help'),
