meet with a fellow info update

--- a/templates/meet_with_a_fellow.html
+++ b/templates/meet_with_a_fellow.html
@@ -56,7 +56,7 @@
               </tr>
               <tr>
                 <td scope="row">February 5, 12:00 PM - 01:00 PM PST</td>
-                <td style="white-space: pre-wrap;">Murray Campbell, Marie desJardins, Eugene Freuder, Mark Maybury</td>
+                <td style="white-space: pre-wrap;">Murray Campbell, Marie desJardins, Eugene Freuder, Mark Maybury, Francesca Rossi</td>
               </tr>
               <tr>
                 <td scope="row">February 5, 01:00 PM - 02:00 PM PST</td>
@@ -68,7 +68,7 @@
               </tr>
               <tr>
                 <td scope="row">February 6, 12:00 PM - 01:00 PM PST</td>
-                <td style="white-space: pre-wrap;">Chad Jenkins, Bing Liu, Francesca Rossi</td>
+                <td style="white-space: pre-wrap;">Chad Jenkins, Bing Liu</td>
               </tr>
               <tr>
                 <td scope="row">February 6, 08:00 PM - 09:00 PM PST</td>
